SERVER-23702 Fix server crashing on invalid decimal toString invariant check